# URLTool

./: .gitignore  CMakeLists.txt  README.md  build.bat
Sources/: BrowserDiaLog.cpp  ErrorPopup.cpp  InputListDiaLog.cpp  main.cpp  mainwindow.cpp
Sources/Forms/: mainwindow.ui  ui_Mainwindow.h
Sources/Headers/: AskPopup.h  BrowserDiaLog.h  CustomDiaLog.h  DiaLog.h  ErrorPopup.h  InfoPopup.h  InputListDiaLog.h  Popup.h  PopupTemplate.h  WarningPopup.h  mainwindow.h
Sources/Module/: AskPopup.cpp  BrowserDiaLog.cpp  CustomDiaLog.cpp  InfoPopup.cpp  InputListDiaLog.cpp  WarningPopup.cpp  mainwindow.cpp
docs/: CONTRIBUTING.md  HISTORY.md  LICENSE
